Embed videos, add headshot, remix MOL

--- a/epk/index.html
+++ b/epk/index.html
@@ -38,26 +38,19 @@
   </header>
 
   <section class="media">
-    <h3>Photos & Videos - Show Debut 05/23/2025</h3>
+    <h3>Videos - Show Debut 05/23/2025</h3>
     <div class="gallery">
       <div>
-        <div class="media-caption">A Venetian word meaning<br/>"Duke"</div>              
-        <video controls>
-          <source src="https://dl.dropboxusercontent.com/scl/fi/e8rp0vhowqxg97xy2xw8l/Doge.mp4" type="video/mp4">
-        </video>
-        
+        <div class="media-caption">A Venetian word meaning<br/>"Duke"</div>
+          <iframe class="utvid" src="https://www.youtube.com/embed/7aig4lW_qFI" title="The Republic of Venice" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       <div>
-        <div class="media-caption">Quick show of hands/<br/>Let's Go Crazy</div>              
-        <video controls>
-          <source src="Interlude.mp4" type="video/mp4">
-        </video>
+        <div class="media-caption">Quick show of hands/<br/>Let's Go Crazy</div> 
+        <iframe class="utvid" src="https://youtube.com/embed/YCsVmwxbmz8" title="Nuclear Apocalypse" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       <div>
-        <div class="media-caption">We Are Ratios/<br/>Drift Away</div>              
-        <video controls>
-          <source src="7_Closing.mp4" type="video/mp4">
-        </video>
+        <div class="media-caption">We Are Ratios/<br/>Drift Away</div>
+        <iframe class="utvid" src="https://www.youtube.com/embed/6GR_93YEpaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </section>
@@ -87,7 +80,7 @@
   </section>
 
   <section class="shows">
-    <h3>Shows</h3>
+    <h3>Recent Shows</h3>
     <ul>
       <li><a href="https://nwfolklife.org/festival/home.html" target="_blank">54th Annual NW Folklife Festival (<i>Surviving the Robot Apocalypse</i> World Premier)</a></li>
       <li><a href="https://hugohouse.org/event/rock-lit-art-jet-fuel_2025-01-23/">Richard Hugo House: Rock, Lit, & Art-Jet Fuel (as frontman of Anomalies)</a></li>
@@ -104,7 +97,7 @@
   </section>
 
   <footer>
-    <p>Contact: <a href="mailto:booking@pythagorasmusic.com">booking@pythagorasmusic.com</a></p>
+    <p>Contact: <a href="mailto:paul@piisoftware.com">Pythagoras @ piisoftware</a></p>
   </footer>
 </body>
 </html>
